# buildtools

./: .gitignore  README  all.sh  binutils-xomb.patch  binutils.2.19.patch  binutils.2.2X.patch  build.sh  build_llvm.sh  devtools.sh  embedlibs.sh  gcc-xomb.patch  gcc.patch  mpfr.patch  native-build.sh  newlib-xomb.patch  pciutils.sh  ppl.patch
gcc-files/gcc/config/: os.h  xomb.h
newlib-files/: Makefile.in  crt0.c  syscalls.c
newlib-files/asm/: byteorder.h  io.h
newlib-files/newlib/libc/sys/xomb/: Makefile.am  Makefile.in  aclocal.m4  configure.in  crt0.c  syscalls.c
newlib-files/sys/: mman.h  stat.h
newlib-xomb/newlib/libc/sys/xomb/: crt0.c
patches/: bash.patch  binutils.patch  cloog.patch  gmp.patch  llvm.patch  mpc.patch  nano.patch  ncurses.patch  newlib.patch  pciutils.patch  slang.patch
scripts/: config.sh  fetchandpatch.sh  functions.sh  nativevars.sh
